feature: replaced some hardcoded values with vars

--- a/templates/mirror.list.j2
+++ b/templates/mirror.list.j2
@@ -9,7 +9,7 @@ set base_path    /var/apt-mirror
 # set defaultarch  <running host architecture>
 # set postmirror_script $var_path/postmirror.sh
 # set run_postmirror 0
-set nthreads     3
+set nthreads     {{mirror_num_threads}}
 set _tilde 0
 #
 ############# end config ##############
