fix: replace hardcoded base_path with var

--- a/templates/mirror.list.j2
+++ b/templates/mirror.list.j2
@@ -1,6 +1,6 @@
-############# config ##################
+# MANAGED_BY_ANSIBLE
 #
-set base_path    /var/apt-mirror
+set base_path    {{ mirror_base }}
 #
 # set mirror_path  $base_path/mirror
 # set skel_path    $base_path/skel
@@ -9,27 +9,27 @@ set base_path    /var/apt-mirror
 # set defaultarch  <running host architecture>
 # set postmirror_script $var_path/postmirror.sh
 # set run_postmirror 0
-set nthreads     {{mirror_num_threads}}
+set nthreads     {{ mirror_num_threads }}
 set _tilde 0
 #
-############# end config ##############
-{% for codename in mirror_codenames %}
-{% for arch in mirror_archs %}
+# --------------------------------
+{%	for codename in mirror_codenames %}
+{%		for arch in mirror_archs %}
 
-deb-{{arch}} http://{{mirror_src}}/ubuntu {{codename}}           main restricted universe multiverse
-deb-{{arch}} http://{{mirror_src}}/ubuntu {{codename}}-security  main restricted universe multiverse
-deb-{{arch}} http://{{mirror_src}}/ubuntu {{codename}}-updates   main restricted universe multiverse
-#eb-{{arch}} http://{{mirror_src}}/ubuntu {{codename}}-proposed  main restricted universe multiverse
-deb-{{arch}} http://{{mirror_src}}/ubuntu {{codename}}-backports main restricted universe multiverse
-{% endfor %}
+deb-{{arch}} http://{{ mirror_src }}/ubuntu {{ codename }}           main restricted universe multiverse
+deb-{{arch}} http://{{ mirror_src }}/ubuntu {{ codename }}-security  main restricted universe multiverse
+deb-{{arch}} http://{{ mirror_src }}/ubuntu {{ codename }}-updates   main restricted universe multiverse
+#eb-{{arch}} http://{{ mirror_src }}/ubuntu {{ codename }}-proposed  main restricted universe multiverse
+deb-{{arch}} http://{{ mirror_src }}/ubuntu {{ codename }}-backports main restricted universe multiverse
+{%		endfor %}
 
-deb-src http://{{mirror_src}}/ubuntu {{codename}}           main restricted universe multiverse
-deb-src http://{{mirror_src}}/ubuntu {{codename}}-security  main restricted universe multiverse
-deb-src http://{{mirror_src}}/ubuntu {{codename}}-updates   main restricted universe multiverse
-#eb-src http://{{mirror_src}}/ubuntu {{codename}}-proposed  main restricted universe multiverse
-deb-src http://{{mirror_src}}/ubuntu {{codename}}-backports main restricted universe multiverse
-{% endfor %}
+deb-src http://{{ mirror_src }}/ubuntu {{ codename }}           main restricted universe multiverse
+deb-src http://{{ mirror_src }}/ubuntu {{ codename }}-security  main restricted universe multiverse
+deb-src http://{{ mirror_src }}/ubuntu {{ codename }}-updates   main restricted universe multiverse
+#eb-src http://{{ mirror_src }}/ubuntu {{ codename }}-proposed  main restricted universe multiverse
+deb-src http://{{ mirror_src }}/ubuntu {{  codename }}-backports main restricted universe multiverse
+{%	 endfor %}
 
-clean http://{{mirror_src}}/ubuntu
+clean http://{{ mirror_src }}/ubuntu
 
 # end
